--- a/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
@@ -346,7 +346,7 @@
 					{
 						deseadosFinales = deseadosOfertas;
 					}
-					
+
 					if (pestañaMostrar == 1)
 					{
 						deseadosFinales = deseadosHistoricos;
@@ -533,6 +533,15 @@
 														</div>
 													</div>
 												</a>
+
+												@if (string.IsNullOrEmpty(otroUsuario) == true && usuarioLogeado == true && juego.Importado == false)
+												{
+													<div style="background-color: transparent; padding: 5px 10px; display: flex; align-items: center; gap: 10px; right: -100px; position: absolute;">
+														<button @onclick="@(e => QuitarJuego(e, juego.Id, juego.DRM))" style="width: fit-content; font-size: 14px; color: var(--colorEnlace); background: transparent; border: 0px; text-decoration: none; margin-left: auto;">
+															@Herramientas.Idiomas.BuscarTexto(idioma, "String22", "Wishlist")
+														</button>
+													</div>
+												}
 											</div>
 										}
 									}
@@ -592,6 +601,15 @@
 														</div>
 													</div>
 												</a>
+
+												@if (string.IsNullOrEmpty(otroUsuario) == true && usuarioLogeado == true && juego.Importado == false)
+												{
+													<div style="background-color: transparent; padding: 5px 10px; display: flex; align-items: center; gap: 10px; right: -100px; position: absolute;">
+														<button @onclick="@(e => QuitarJuego(e, juego.Id, juego.DRM))" style="width: fit-content; font-size: 14px; color: var(--colorEnlace); background: transparent; border: 0px; text-decoration: none; margin-left: auto;">
+															@Herramientas.Idiomas.BuscarTexto(idioma, "String22", "Wishlist")
+														</button>
+													</div>
+												}
 											</div>
 										}	
 									}
@@ -829,6 +847,7 @@
 								nuevoDeseadoBundle.IdBundle = bundle.Id;
 								nuevoDeseadoBundle.DRM = deseado.DRM;
 								nuevoDeseadoBundle.Imagen = deseado.Imagen;
+								nuevoDeseadoBundle.Importado = deseado.Importado;
 
 								deseadosBundles.Add(nuevoDeseadoBundle);
 							}
@@ -857,6 +876,7 @@
 							nuevoDeseadoSuscripcion.IdSuscripcion = juegoSuscripcion.Id;
 							nuevoDeseadoSuscripcion.DRM = deseado.DRM;
 							nuevoDeseadoSuscripcion.Imagen = deseado.Imagen;
+							nuevoDeseadoSuscripcion.Importado = deseado.Importado;
 
 							deseadosSuscripciones.Add(nuevoDeseadoSuscripcion);
 						}
@@ -1051,7 +1071,7 @@
 		return null;
 	}
 
-	private void QuitarJuego(MouseEventArgs e, int juegoId, Juegos.JuegoDRM drm)
+	private async void QuitarJuego(MouseEventArgs e, int juegoId, Juegos.JuegoDRM drm)
 	{
 		Juegos.Juego juego = BaseDatos.Juegos.Buscar.UnJuego(juegoId);
 
@@ -1093,6 +1113,52 @@
 
 			deseadosHistoricos.RemoveAt(i);
 		}
+
+		if (deseadosBundles.Count > 0)
+		{
+			int j = 0;
+			while (j < 10)
+			{
+				int i = 0;
+
+				foreach (var oferta in deseadosBundles)
+				{
+					if (oferta.Id == juego.Id && oferta.DRM == drm)
+					{
+						break;
+					}
+
+					i += 1;
+				}
+
+				deseadosBundles.RemoveAt(i);
+				j += 1;
+			}
+		}
+
+		if (deseadosSuscripciones.Count > 0)
+		{
+			int j = 0;
+			while (j < 10)
+			{
+				int i = 0;
+
+				foreach (var oferta in deseadosSuscripciones)
+				{
+					if (oferta.Id == juego.Id && oferta.DRM == drm)
+					{
+						break;
+					}
+
+					i += 1;
+				}
+
+				deseadosSuscripciones.RemoveAt(i);
+				j += 1;
+			}
+		}
+
+		await InvokeAsync(StateHasChanged);
 	}
 
 	#region Ordenar
