--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -336,6 +336,19 @@
         }
     </script>
 
+    <script>
+        window.clipboardCopy = {
+            copyText: function(text) {
+                navigator.clipboard.writeText(text).then(function () {
+                    alert("Copied to clipboard");
+                })
+                .catch(function (error) {
+                    alert(error);
+                });
+            }
+        };
+    </script>
+
     <script src="~/pushNotifications.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
